src2/objects/Knowledge__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Additional_Resources__c</fullName>
        <label>Additional Resources</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Article_Purpose__c</fullName>
        <description>Explains why this article is useful (ex. &quot;Assist Coffee Specialist Selection of the right Resolution&quot;)</description>
        <label>Article Purpose</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Background__c</fullName>
        <description>Used to provide Background information, used in FAQ context</description>
        <label>Background</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Campaign_type__c</fullName>
        <label>Campaign type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Marketing Campaign</fullName>
                </value>
                <value>
                    <fullName>MGM</fullName>
                </value>
                <value>
                    <fullName>SPRING Promo</fullName>
                </value>
                <value>
                    <fullName>YEP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <label>Case Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Feedback</fullName>
                </value>
                <value>
                    <fullName>Service Request</fullName>
                </value>
                <value>
                    <fullName>Technical Troubleshooting</fullName>
                </value>
                <value>
                    <fullName>Operational Incident</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Coffee_Specialist_answer__c</fullName>
        <description>This field is used to guide the Coffee Specialist how to answer to a customer question</description>
        <label>Coffee Specialist answer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commercial_name__c</fullName>
        <description>This is how a product (i.e. machine, Accessoire,..) is sold to the customers</description>
        <label>Commercial name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <description>Contains Knowledge article content</description>
        <label>Content</label>
        <length>100000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>End_date__c</fullName>
        <description>used for example in MArketing Campaigns and Promos</description>
        <label>End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FAQ_Portal_ID__c</fullName>
        <label>FAQ Portal ID</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_code__c</fullName>
        <description>this code is used to design a machine model, internally.

This is usually linked to the Manufacturer code</description>
        <label>Internal code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Manufacturer_Code__c</fullName>
        <description>this Manufacturer code is the way to design a machine / product.
It is usually linked to the Internal Code</description>
        <label>Manufacturer Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Image__c</fullName>
        <formula>Image ( Product__r.Product_Image_URL__c , &quot;no image&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Model</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Knowledge</relationshipLabel>
        <relationshipName>Knowledge_Articles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Review_frequency_in_month__c</fullName>
        <label>Review frequency (in month)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Knowledge</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sensitivity__c</fullName>
        <label>Sensitivity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shareclub_link__c</fullName>
        <description>link to ShareClub content</description>
        <label>Shareclub link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Social_Media_answer__c</fullName>
        <description>in case an answer has to be sent by email / chat, the coffee Specialist can use this version of the answer</description>
        <label>Social Media answer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Start_date__c</fullName>
        <description>used for example with MArketing Campaigns and promos</description>
        <label>Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Symptom_Level_One__c</fullName>
        <label>Symptom Level One</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Capsule</fullName>
                </value>
                <value>
                    <fullName>Coffee grounds in cup</fullName>
                </value>
                <value>
                    <fullName>Coffee temperature</fullName>
                </value>
                <value>
                    <fullName>Crema</fullName>
                </value>
                <value>
                    <fullName>Electrical/electronic problem</fullName>
                </value>
                <value>
                    <fullName>Flow problem</fullName>
                </value>
                <value>
                    <fullName>Maintenance / Odour</fullName>
                </value>
                <value>
                    <fullName>Mechanical problem</fullName>
                </value>
                <value>
                    <fullName>Message display (B2B)</fullName>
                </value>
                <value>
                    <fullName>Milk / Foam Froth</fullName>
                </value>
                <value>
                    <fullName>Neslink</fullName>
                </value>
                <value>
                    <fullName>Noise - Sound - Vibrations</fullName>
                </value>
                <value>
                    <fullName>Scale</fullName>
                </value>
                <value>
                    <fullName>Smartphone error codes</fullName>
                </value>
                <value>
                    <fullName>Steam</fullName>
                </value>
                <value>
                    <fullName>Water leak</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Symptom_Level_Two__c</fullName>
        <label>Symptom Level Two</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Symptom_Level_One__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cups fill to different levels</fullName>
                </value>
                <value>
                    <fullName>No flow</fullName>
                </value>
                <value>
                    <fullName>Poor flow</fullName>
                </value>
                <value>
                    <fullName>Water comes out instead of coffee</fullName>
                </value>
                <value>
                    <fullName>Capsule cannot be inserted</fullName>
                </value>
                <value>
                    <fullName>Capsule falls straight into the bin</fullName>
                </value>
                <value>
                    <fullName>Capsule not perforated</fullName>
                </value>
                <value>
                    <fullName>Capsule squashed</fullName>
                </value>
                <value>
                    <fullName>Capsule squeezed</fullName>
                </value>
                <value>
                    <fullName>Capsule stays trapped in cage</fullName>
                </value>
                <value>
                    <fullName>Capsules membrane ripped</fullName>
                </value>
                <value>
                    <fullName>1.1 Capsule cannot be inserted</fullName>
                </value>
                <value>
                    <fullName>1.2 Capsule falls straight into the bin</fullName>
                </value>
                <value>
                    <fullName>1.3 Capsule not perforated</fullName>
                </value>
                <value>
                    <fullName>1.4 Capsule squashed</fullName>
                </value>
                <value>
                    <fullName>1.5 Capsule squeezed</fullName>
                </value>
                <value>
                    <fullName>1.6 Capsule stays trapped in cage</fullName>
                </value>
                <value>
                    <fullName>1.7 Capsules membrane ripped</fullName>
                </value>
                <value>
                    <fullName>3.1 Coffee lukewarm/not hot enough</fullName>
                </value>
                <value>
                    <fullName>5.1 Automatic switch off</fullName>
                </value>
                <value>
                    <fullName>5.2 Capsules container red lighted</fullName>
                </value>
                <value>
                    <fullName>5.3 Irregular blinking</fullName>
                </value>
                <value>
                    <fullName>5.4 Machine fails to switch on</fullName>
                </value>
                <value>
                    <fullName>5.5 Pump switches on by itself</fullName>
                </value>
                <value>
                    <fullName>5.6 Regular and fast blinking</fullName>
                </value>
                <value>
                    <fullName>6.1 Cups fill to different levels</fullName>
                </value>
                <value>
                    <fullName>6.2 Impossible to stop runoff</fullName>
                </value>
                <value>
                    <fullName>6.3 No flow</fullName>
                </value>
                <value>
                    <fullName>6.4 Poor flow</fullName>
                </value>
                <value>
                    <fullName>6.5 Water comes out instead of coffee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Video_URL__c</fullName>
        <label>Video URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Video__c</fullName>
        <label>Video</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>item_category__c</fullName>
        <description>Used as a reference for FAQ</description>
        <label>item category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>question__c</fullName>
        <description>the question can be the title of the original FAQ</description>
        <label>question</label>
        <type>TextArea</type>
    </fields>
    <label>Knowledge</label>
    <listViews>
        <fullName>All_published_FAQs</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>VALIDATION_STATUS_ENUM</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LANGUAGE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Knowledge__kav.FAQ</value>
        </filters>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <label>All published FAQs</label>
    </listViews>
    <listViews>
        <fullName>archived_articles</fullName>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>LANGUAGE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>3</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>Archived Articles</label>
    </listViews>
    <listViews>
        <fullName>draft_articles</fullName>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>RECORDTYPE</columns>
        <columns>LANGUAGE</columns>
        <columns>ASSIGNEDBY_USER</columns>
        <columns>ASSIGNEDTO_USER</columns>
        <columns>ASSIGNMENT_DATE</columns>
        <columns>ASSIGNMENT_DUE_DATE</columns>
        <columns>ASSIGNMENT_NOTE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>Draft Articles</label>
    </listViews>
    <listViews>
        <fullName>published_articles</fullName>
        <columns>RECORDTYPE</columns>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>LANGUAGE</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Published Articles</label>
    </listViews>
    <pluralLabel>Knowledge</pluralLabel>
    <recordTypes>
        <fullName>Campaigns</fullName>
        <active>true</active>
        <description>this record type provides all necessary details about Promotions and Campaigns</description>
        <label>Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>FAQ</fullName>
        <active>true</active>
        <description>Create a frequently asked question.</description>
        <label>FAQ</label>
    </recordTypes>
    <recordTypes>
        <fullName>Instruction</fullName>
        <active>true</active>
        <description>Create an instruction article</description>
        <label>Instruction</label>
    </recordTypes>
    <recordTypes>
        <fullName>Manual</fullName>
        <active>true</active>
        <description>Create a manual and link it with a file.</description>
        <label>Manual</label>
    </recordTypes>
    <recordTypes>
        <fullName>Troubleshooting</fullName>
        <active>true</active>
        <description>Create a machine troubleshooting article</description>
        <label>Troubleshooting</label>
    </recordTypes>
    <recordTypes>
        <fullName>Video_Tutorial</fullName>
        <active>true</active>
        <description>Create a video tutorial.</description>
        <label>Video Tutorial</label>
    </recordTypes>
</CustomObject>